--- a/index.html
+++ b/index.html
@@ -5,17 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TETRIS</title>
+    <link rel="icon" href="assets/tetris.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <section class="start">Start Game</section>
+    <section class="start">
+        Start Game
+
+        <footer>This site was made only for Education Purposes by
+            <a href="#">Lucia Esteves</a> &copy;2023
+        </footer>
+    </section>
     <div>
         <h2>Score: <span id="score"></span></h2>
     </div>
     <canvas></canvas>
     <article id="user-device"></article>
+    
+
     <script defer type="module" src="index.js"></script>
 </body>
+
 
 </html>
