Se agregó link al footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         Start Game
 
         <footer>This site was made only for Education Purposes by
-            <a href="#">Lucia Esteves</a> &copy;2023
+            <a href="https://softiacodes.com/">Lucia Esteves</a> &copy;2023
         </footer>
     </section>
     <div>
